# fastapi_project_template

./: .pre-commit-config.yaml  Dockerfile  README.md  compose.yml  pyproject.toml  run_app.sh
src/: main.py  settings.py
src/app/: __init__.py  containers.py
tests/unit/: conftest.py
